--- a/app/src/main/res/layout/activity_profile_setting.xml
+++ b/app/src/main/res/layout/activity_profile_setting.xml
@@ -14,11 +14,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginTop="16dp"
         android:text="Live Streaming"
         android:textColor="@color/Graycolor"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -43,31 +44,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_liveStreaming" />
 
-
-    <TextView
-        android:id="@+id/txt_biometric"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="10dp"
-        android:text="Biometrics Login"
-        android:textColor="@color/Graycolor"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view3" />
-
     <Switch
         android:id="@+id/swt_biometric_state"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginTop="10dp"
         android:padding="0dp"
+        android:text="Biometrics Login"
+        android:textColor="@color/Graycolor"
+        android:textSize="16sp"
         android:theme="@style/SCBSwitch"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_biometric"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txt_biometric" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view3" />
 
     <View
         android:id="@+id/view7"
@@ -77,21 +68,8 @@
         android:background="@color/Graycolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_biometric" />
+        app:layout_constraintTop_toBottomOf="@+id/swt_biometric_state" />
 
-
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="10dp"
-        android:text="Allow Booking"
-        android:textColor="@color/Graycolor"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view7" />
 
     <Switch
         android:id="@+id/swt_allow_booking"
@@ -100,10 +78,14 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:padding="0dp"
+        android:layout_marginTop="10dp"
+        android:text="Allow Booking"
+        android:textColor="@color/Graycolor"
+        android:textSize="16sp"
         android:theme="@style/SCBSwitch"
-        app:layout_constraintBottom_toBottomOf="@+id/textView22"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView22" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view7" />
 
     <View
         android:id="@+id/view8"
@@ -113,20 +95,7 @@
         android:background="@color/Graycolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView22" />
-
-    <TextView
-        android:id="@+id/textView24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="10dp"
-        android:text="Allow Messaging"
-        android:textColor="@color/Graycolor"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view8" />
+        app:layout_constraintTop_toBottomOf="@+id/swt_allow_booking" />
 
 
     <Switch
@@ -135,11 +104,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginTop="10dp"
         android:padding="0dp"
+        android:text="Allow Messaging"
+        android:textColor="@color/Graycolor"
+        android:textSize="16sp"
         android:theme="@style/SCBSwitch"
-        app:layout_constraintBottom_toBottomOf="@+id/textView24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView24" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view8" />
 
     <View
         android:id="@+id/view10"
@@ -149,33 +122,24 @@
         android:background="@color/Graycolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView25" />
-
-
-    <TextView
-        android:id="@+id/textView25"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="10dp"
-        android:text="Allow Song Request"
-        android:textColor="@color/Graycolor"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view9" />
+        app:layout_constraintTop_toBottomOf="@+id/swt_allow_song_request" />
 
     <Switch
         android:id="@+id/swt_allow_song_request"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginTop="10dp"
         android:padding="0dp"
+        android:text="Allow Song Request"
+        android:textColor="@color/Graycolor"
+        android:textSize="16sp"
         android:theme="@style/SCBSwitch"
         app:layout_constraintBottom_toBottomOf="@+id/textView25"
-        app:layout_constraintTop_toTopOf="@+id/textView25"
-        tools:layout_editor_absoluteX="328dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/swt_allow_messaging" />
 
     <View
         android:layout_width="match_parent"
@@ -196,14 +160,14 @@
         android:layout_marginTop="10dp"
         android:text="Change Password"
         android:textColor="@color/Graycolor"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view10" />
 
     <ImageView
         android:id="@+id/img_change"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="@+id/txt_change_password"
@@ -236,7 +200,7 @@
     <ImageView
         android:id="@+id/img_social"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="@+id/txt_social"
@@ -252,7 +216,7 @@
         android:background="@color/Graycolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView24" />
+        app:layout_constraintTop_toBottomOf="@+id/swt_allow_messaging" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
