--- a/app/src/main/res/layout/item_notification_layout.xml
+++ b/app/src/main/res/layout/item_notification_layout.xml
@@ -5,10 +5,11 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#000">
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/follwer_layout"
         android:padding="6dp"
         android:background="#000"
+        android:paddingBottom="6dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,56 +19,76 @@
             android:layout_height="50dp"
             app:civ_border_color="@color/colorWhite"
             app:civ_border_width="2dp"
-            app:srcCompat="@drawable/ic_avatar"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_avatar" />
+
+        <ProgressBar
+            android:id="@+id/progressBarProfile"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:padding="4dp"
+            android:indeterminateDrawable="@drawable/progressbar"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/img_profile"
+            app:layout_constraintEnd_toEndOf="@+id/img_profile"
+            app:layout_constraintStart_toStartOf="@+id/img_profile"
+            app:layout_constraintTop_toTopOf="@+id/img_profile" />
 
         <TextView
             android:id="@+id/txt_User_name"
-            android:layout_toRightOf="@+id/img_profile"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_toRightOf="@+id/img_profile"
+            android:fontFamily="@font/montserrat"
             android:text="Jhon Ibrahim"
             android:textColor="#fff"
-            android:textSize="16sp"
-            />
+            android:textSize="14sp"
+            app:layout_constraintStart_toEndOf="@+id/img_profile"
+            app:layout_constraintTop_toTopOf="@+id/img_profile" />
+
 
         <TextView
-            android:id="@+id/txt_SubscribeArtistStatus"
-            android:layout_toRightOf="@+id/img_profile"
+            android:id="@+id/notification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/txt_User_name"
-            android:layout_marginTop="4dp"
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CEO of WE 6 Band"
+            android:layout_toRightOf="@+id/img_profile"
+            android:fontFamily="@font/montserrat"
+            android:inputType="textMultiLine"
+            android:text="CEO of WE 6 Band "
             android:textColor="@color/Graycolor"
-            android:textSize="13sp"
-            />
-
-
-        <TextView
-            android:id="@+id/txt_UnBlock"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorBlue"
-           android:padding="6dp"
             android:textSize="12sp"
-            android:background="@drawable/blueround_stroke"
-            android:text="Unfollow"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/txt_User_name"
+            app:layout_constraintTop_toBottomOf="@+id/txt_User_name" />
 
         <View
             android:id="@+id/divider10"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="4dp"
             android:layout_below="@+id/img_profile"
+            android:layout_marginTop="4dp"
             android:background="@color/Graycolor"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_profile" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="30 mint ago"
+            android:textColor="@color/colorBlue"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
