--- a/app/src/main/res/layout/item_song_requests.xml
+++ b/app/src/main/res/layout/item_song_requests.xml
@@ -10,7 +10,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp">
+    android:paddingTop="8dp"
     android:paddingBottom="8dp">
 
     <com.mikhaellopez.circularimageview.CircularImageView
@@ -97,7 +97,7 @@
         app:layout_constraintTop_toBottomOf="@+id/img_profile" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/remove"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:background="@drawable/lighred_roundshap"
