--- a/app/src/main/res/layout/fragment_followers.xml
+++ b/app/src/main/res/layout/fragment_followers.xml
@@ -5,52 +5,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorBlack">
-
-    <RelativeLayout
-        android:layout_marginTop="6dp"
-        android:layout_width="match_parent"
-        android:layout_height="34dp"
-        android:background="#1F1E22">
-
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="8dp"
-            android:layout_width="12dp"
-            android:layout_height="22dp"
-            app:srcCompat="@drawable/ic_search"/>
-
-        <EditText
-            android:id="@+id/txt_search"
-            android:layout_toRightOf="@+id/icon"
-            android:layout_marginLeft="8dp"
-            android:text="Search"
-            android:textSize="12sp"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#fff"/>
-
-        <TextView
-            android:id="@+id/txt_action"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="8dp"
-            android:text="Edit"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#fff"/>
-
-    </RelativeLayout>
     <TextView
-
-        android:layout_width="wrap_content"
+        android:id="@+id/total"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:textSize="14sp"
-        android:textColor="@color/Graycolor"
-        android:text="Online Users"/>
+        android:padding="4dp"
+        android:background="@color/colorBlue"
+        android:textColor="@color/colorWhite"
+        android:text="Total Users"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewFollwer"
