--- a/app/src/main/res/layout/item_followers_and_blocked_user.xml
+++ b/app/src/main/res/layout/item_followers_and_blocked_user.xml
@@ -5,8 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#000">
-    <RelativeLayout
-        android:id="@+id/follwer_layout"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:padding="6dp"
         android:background="#000"
         android:layout_width="match_parent"
@@ -16,23 +15,41 @@
             android:id="@+id/img_profile"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:civ_border_width="2dp"
             app:civ_border_color="@color/colorWhite"
-            app:srcCompat="@drawable/ic_avatar"
-            />
+            app:civ_border_width="2dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_avatar" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="4dp"
+            android:layout_gravity="center"
+            android:indeterminateDrawable="@drawable/progressbar"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/img_profile"
+            app:layout_constraintEnd_toEndOf="@+id/img_profile"
+            app:layout_constraintStart_toStartOf="@+id/img_profile"
+            app:layout_constraintTop_toTopOf="@+id/img_profile" />
+
 
         <TextView
             android:id="@+id/txt_User_name"
-            android:layout_toRightOf="@+id/img_profile"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_toRightOf="@+id/img_profile"
+            android:fontFamily="@font/montserrat"
             android:text="Jhon Ibrahim"
             android:textColor="#fff"
             android:textSize="16sp"
-            />
-
+            app:layout_constraintStart_toEndOf="@+id/img_profile"
+            app:layout_constraintTop_toTopOf="@+id/img_profile" />
 
         <TextView
             android:id="@+id/txt_action"
@@ -41,23 +58,39 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/blueround_stroke"
+            android:fontFamily="@font/montserrat"
             android:paddingLeft="10dp"
             android:paddingTop="4dp"
             android:paddingRight="10dp"
             android:paddingBottom="4dp"
             android:text="Control"
             android:textColor="@color/colorBlue"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/divider10"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="4dp"
             android:layout_below="@+id/img_profile"
+            android:layout_marginTop="2dp"
             android:background="@color/Graycolor"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_profile" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="location"
+            android:textColor="@color/Graycolor"
+            app:layout_constraintStart_toStartOf="@+id/txt_User_name"
+            app:layout_constraintTop_toBottomOf="@+id/txt_User_name" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
