--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -51,7 +51,7 @@
 
         <item android:id="@+id/nav_WithDraw"
             android:icon="@drawable/ic_withdraw"
-            android:title="WithDraw"/>
+            android:title="WithDraws"/>
 
         <item android:id="@+id/nav_PaymentHistory"
             android:icon="@drawable/ic_receipt"
