chat notification remaining and online  status

--- a/app/src/main/res/layout/fragment_myfeed.xml
+++ b/app/src/main/res/layout/fragment_myfeed.xml
@@ -27,7 +27,7 @@
             android:layout_marginBottom="20dp"
             app:srcCompat="@drawable/ic_add"
             android:background="@color/colorBlue"
-            app:backgroundTint="@color/colorBlue"
+            app:backgroundTint="@color/grey"
             app:fabSize="normal"
             />
 
