--- a/app/src/main/res/drawable/fullroundshape.xml
+++ b/app/src/main/res/drawable/fullroundshape.xml
@@ -3,7 +3,7 @@
 
     <stroke android:width="3dp" android:color="#FBFBFB" />
     <corners android:radius="50dp"/>
-    <solid android:color="@color/colorBlue"/>
+    <solid android:color="@color/grey"/>
 
 
 </shape>
