--- a/app/src/main/res/layout/fragment_bookings.xml
+++ b/app/src/main/res/layout/fragment_bookings.xml
@@ -4,19 +4,23 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlack">
+
     <RelativeLayout
         android:id="@+id/rlt_view_all_request"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:paddingLeft="10dp"
-        android:background="#fff">
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/edt_shape">
+
         <ImageView
             android:id="@+id/img_eye"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_centerVertical="true"
             app:srcCompat="@drawable/ic_eye"/>
-
 
         <TextView
             android:layout_width="wrap_content"
@@ -26,7 +30,7 @@
             android:layout_marginLeft="16dp"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/img_eye"
-            android:textColor="@color/colorBlack"/>
+            android:textColor="@color/colorWhite"/>
 
         <ImageView
             android:layout_centerVertical="true"
@@ -45,7 +49,9 @@
         android:layout_height="70dp"
         android:paddingLeft="10dp"
         android:layout_marginTop="8dp"
-        android:background="#fff">
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/edt_shape">
 
         <ImageView
             android:id="@+id/img_done"
@@ -63,7 +69,7 @@
             android:layout_marginLeft="16dp"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/img_done"
-            android:textColor="@color/colorBlack"/>
+            android:textColor="@color/colorWhite"/>
 
 
         <ImageView
@@ -83,7 +89,9 @@
         android:layout_height="70dp"
         android:paddingLeft="8dp"
         android:layout_marginTop="10dp"
-        android:background="#fff">
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/edt_shape">
 
         <ImageView
             android:id="@+id/img_cancle"
@@ -101,7 +109,7 @@
             android:layout_marginLeft="16dp"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/img_cancle"
-            android:textColor="@color/colorBlack"/>
+            android:textColor="@color/colorWhite"/>
 
         <ImageView
             android:layout_centerVertical="true"
