--- a/app/src/main/res/layout/dailoge_request_withdraw.xml
+++ b/app/src/main/res/layout/dailoge_request_withdraw.xml
@@ -30,7 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="40sp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="10dp"
             android:background="@drawable/blueround_stroke"
             android:ems="10"
@@ -38,11 +38,12 @@
             android:hint="Withdraw Amount"
             android:inputType="number"
             android:paddingLeft="8dp"
+            android:minLines="1"
             android:textColor="@color/colorBlue"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView13" />
-
 
         <Button
             android:id="@+id/btn_submit"
