--- a/app/src/main/res/layout/fragment_bookings.xml
+++ b/app/src/main/res/layout/fragment_bookings.xml
@@ -58,7 +58,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_centerVertical="true"
-            app:srcCompat="@drawable/ic_check_blue" />
+            app:srcCompat="@drawable/ic_check_white" />
 
 
         <TextView
