--- a/app/src/main/res/layout/fragment_user_admin.xml
+++ b/app/src/main/res/layout/fragment_user_admin.xml
@@ -159,6 +159,7 @@
 
 
     <RelativeLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:paddingLeft="10dp"
