--- a/app/src/main/res/layout/item_chat_left.xml
+++ b/app/src/main/res/layout/item_chat_left.xml
@@ -29,18 +29,16 @@
         android:text="Hello"
         android:textColor="@color/colorBlack"
         android:textSize="18sp"/>
-
-        <TextView
-            android:id="@+id/time"
-            android:layout_below="@+id/msg"
-            android:layout_marginLeft="2dp"
-            android:layout_toRightOf="@+id/msg"
-            android:layout_width="wrap_content"
-            android:text="12:09"
-            android:textSize="14sp"
-            android:layout_height="wrap_content"/>
-
-
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_below="@+id/rlt_chatitem"
+        android:text="12:09 PM"
+        android:layout_alignParentLeft="true"
+        android:textColor="#f1f1f1"
+        android:textSize="10sp" />
 </RelativeLayout>
