--- a/app/src/main/res/layout/fragment_chat_area.xml
+++ b/app/src/main/res/layout/fragment_chat_area.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp"
     android:id="@+id/pullToRefresh"
@@ -7,23 +8,20 @@
     android:layout_height="match_parent"
     android:background="@color/colorBlack">
 
-
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <EditText
+    <SearchView
         android:id="@+id/edt_search"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:hint="Search Contact"
+        android:queryHint="Search"
+        android:iconifiedByDefault="false"
         android:padding="8dp"
         android:textSize="14sp"
         android:textColor="@color/colorBlack"
-        android:drawableRight="@drawable/ic_search"
         android:paddingRight="8dp"
-        android:background="@drawable/white_roundshape"/>
-
+        android:background="@drawable/edt_shape"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_Chat"
