--- a/app/src/main/res/layout/fragment_msg_room.xml
+++ b/app/src/main/res/layout/fragment_msg_room.xml
@@ -13,6 +13,8 @@
         android:background="@color/grey">
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabMode"
+            app:tabIndicatorColor="@android:color/white"
+            app:tabSelectedTextColor="@color/colorWhite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
