--- a/app/src/main/res/layout/dialog_followers.xml
+++ b/app/src/main/res/layout/dialog_followers.xml
@@ -10,23 +10,24 @@
         android:layout_height="35dp"
         android:textSize="14sp"
         android:padding="4dp"
+        android:gravity="center_vertical"
         android:fontFamily="@font/montserrat"
-        android:gravity="center"
-        android:background="@color/colorBlue"
+        android:background="@color/grey"
         android:textColor="@color/colorWhite"
         android:text="Select Group Members"/>
 
     <Button
         android:id="@+id/createGroup"
-        android:layout_width="60dp"
-        android:layout_height="27dp"
+        android:layout_width="50dp"
+        android:layout_height="25dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:textSize="10sp"
+        android:textSize="12sp"
+        android:fontFamily="@font/montserrat"
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
         android:textColor="@color/colorWhite"
-        android:background="@drawable/fullroundshape"
+        android:background="@drawable/lighblue_roundshap"
         android:textAllCaps="false"
         android:text="Create"/>
 
