--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -15,7 +15,7 @@
                 android:id="@+id/msg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Create Group For User"
+                android:text="Create Group."
                 android:textSize="25sp"
                 android:textColor="@color/grey"
                 android:layout_centerInParent="true"/>
